// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar2 passes div props 1`] = `
<div>
  <div
    class="className Toolbar2 Toolbar2_gapSize_s"
  >
    <div
      class="Toolbar2__side Toolbar2__side_left"
    >
      <span />
    </div>
  </div>
</div>
`;

exports[`Toolbar2 renders both 1`] = `
<div>
  <div
    class="Toolbar2 Toolbar2_gapSize_s"
  >
    <div
      class="Toolbar2__side Toolbar2__side_left"
    >
      left
    </div>
    <div
      class="Toolbar2__side Toolbar2__side_right"
    >
      right
    </div>
  </div>
</div>
`;

exports[`Toolbar2 renders only left 1`] = `
<div>
  <div
    class="Toolbar2 Toolbar2_gapSize_s"
  >
    <div
      class="Toolbar2__side Toolbar2__side_left"
    >
      left
    </div>
  </div>
</div>
`;

exports[`Toolbar2 renders only right 1`] = `
<div>
  <div
    class="Toolbar2 Toolbar2_gapSize_s"
  >
    <div
      class="Toolbar2__side Toolbar2__side_left"
    >
      <span />
    </div>
    <div
      class="Toolbar2__side Toolbar2__side_right"
    >
      right
    </div>
  </div>
</div>
`;

exports[`Toolbar2 renders without errors 1`] = `
<div>
  <div
    class="Toolbar2 Toolbar2_gapSize_s"
  >
    <div
      class="Toolbar2__side Toolbar2__side_left"
    >
      <span />
    </div>
  </div>
</div>
`;
